--- a/static/styles.css
+++ b/static/styles.css
@@ -8,7 +8,7 @@ body {
     text-align: left;
 }
 
-.container {
+main {
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
@@ -17,15 +17,16 @@ body {
     width: 90%;
 }
 
-.jumbotron {
+header {
     background-color: rgba(0, 0, 0, 0.5);
     color: #63b0aa;
-    margin-bottom: 2rem;
+    margin-bottom: 0;
     padding: 2rem 1rem;
     text-align: center;
 }
 
-.section {
+section {
+    margin-top: 2rem;
     margin-bottom: 2rem;
     padding-bottom: 1rem;
     padding-left: 2rem;
@@ -33,7 +34,7 @@ body {
     padding-top: 0.5rem;
 }
 
-.section:hover {
+section:hover {
     background-color: rgba(0, 0, 0, 0.5);
     transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
 }
@@ -82,3 +83,19 @@ tbody tr:nth-of-type(odd) {
     background-color: rgb(179, 208, 255, 0.3)
 }
 
+h2 {
+    color: white;
+}
+
+a.voltar {
+    font-size: 25px;
+    color: yellow;
+}
+
+#niver {
+    display: none;
+}
+
+#flash {
+    color: black;
+}
