--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
+{% extends "layout.html" %}
 
-<html lang="en">
-    <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-        <link href="/static/styles.css" rel="stylesheet">
-        <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
-        <title>Aniversários</title>
-    </head>
-    <body>
-        <div class="jumbotron">
-            <h1>Aniversários</h1>
-        </div>
-        <div class="container">
-            <div class="section">
+{% block title %}
+    Aniversários
+{% endblock %}
+
+{% block main %}
+        <main>
+            <section>
 
                 <h2>Adicionar um aniversário</h2>
                 <br>
@@ -21,15 +14,18 @@
                 <form action="/" method="post">
 
                 <input autocomplete="off" autofocus name="name" placeholder="Nome" type="text">
-                <input autocomplete="off" autofocus name="day" placeholder="Dia" type="number">
-                <input autocomplete="off" autofocus name="month" placeholder="Mês" type="number">
+                <input autocomplete="off" autofocus name="day" placeholder="Dia" type="number" min="1" step="1" max="31">
+                <input autocomplete="off" autofocus name="month" placeholder="Mês" type="number" min="1" step="1" max="12">
                 <input type="submit" value="Registrar">
 
                 </form>
-            </div>
+            </section>
 
-            <div class="section">
+            <section id="niver">
+            </section>
 
+            <section>
+    
                 <h2>Todos os aniversários</h2>
                 <table>
                     <thead>
@@ -56,7 +52,6 @@
                         {% endfor %}
                     </tbody>
                 </table>
-            </div>
-        </div>
-    </body>
-</html>
+            </section>
+        </main>
+{% endblock %}
