--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
                 <form action="/" method="post">
 
                 <input autocomplete="off" autofocus name="name" placeholder="Nome" type="text">
+                <input autocomplete="off" autofocus name="email" placeholder="E-mail" type="text">
                 <input autocomplete="off" autofocus name="day" placeholder="Dia" type="number" min="1" step="1" max="31">
                 <input autocomplete="off" autofocus name="month" placeholder="Mês" type="number" min="1" step="1" max="12">
                 <input type="submit" value="Registrar">
