--- a/templates/enviado.html
+++ b/templates/enviado.html
@@ -1,12 +1,15 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Erro 
+    Enviado!
 {% endblock %}
 
 {% block main %}
         <main>
-            <h2 class="outrosH2"> {{ erro }} </h2>
+            <section>
+            <h2> E-mail enviado com sucesso! </h2>
+            <h2> Mensagem: {{ mensagem }}</h2>
             <a class="voltar" href="/">Voltar</a>
+            </section>
         </main>
 {% endblock %}
