--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                 <form action="/" method="post">
 
                 <input autocomplete="off" autofocus name="name" placeholder="Nome" type="text">
-                <input autocomplete="off" autofocus name="email" placeholder="E-mail" type="text">
+                <input autocomplete="off" autofocus name="email" placeholder="E-mail" type="email">
                 <input autocomplete="off" autofocus name="day" placeholder="Dia" type="number" min="1" step="1" max="31">
                 <input autocomplete="off" autofocus name="month" placeholder="Mês" type="number" min="1" step="1" max="12">
                 <input type="submit" value="Registrar">
@@ -23,6 +23,12 @@
             </section>
 
             <section id="niver">
+                {% if textos %}
+                    {% for texto in textos %}
+                        <h2>{{ texto }}</h2>
+                        <h2><a href="/email_parabens">Clique aqui</a> para enviar os parabéns</h2>
+                    {% endfor %}
+                {% endif %}
             </section>
 
             <section>
