--- a/templates/enviado.html
+++ b/templates/enviado.html
@@ -8,7 +8,7 @@
         <main>
             <section>
             <h2> E-mail enviado com sucesso! </h2>
-            <h2> Mensagem: {{ mensagem }}</h2>
+            <h2> Mensagem: <span id="mensagem">{{ mensagem }}</span></h2>
             <a class="voltar" href="/">Voltar</a>
             </section>
         </main>
