--- a/static/styles.css
+++ b/static/styles.css
@@ -135,3 +135,10 @@ input[name="personalizado"], input[name="padrao"] {
 #niver > .cliqueAqui {
     color: #52a59e;
 }
+
+textarea {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
