--- a/templates/email_parabens.html
+++ b/templates/email_parabens.html
@@ -8,7 +8,8 @@
         <main>
             <section>
             <form action="/email_parabens" method="post">
-                <input autocomplete="off" autofocus name="name" placeholder="Seu nome" type="text">
+                <h2 class="outrosH2"> Digite seu nome: </h2>
+                <input autocomplete="off" autofocus name="name" placeholder="Nome" type="text">
                 <h2 class="outrosH2"> Escolha uma opção: </h2>
                 <input type="submit" name="personalizado" value="Enviar e-mail personalizado">
                 <input type="submit" name="padrao" value="Enviar e-mail padrão">
