/personalizado consegue voltar à página anterior

--- a/templates/personalizado.html
+++ b/templates/personalizado.html
@@ -12,7 +12,7 @@
                 <textarea name="msg_personalizada" id="msgPersonalizada" cols="70" rows="5"></textarea>
                 <input type="submit" name="enviar" value="Enviar e-mail">
             </form>
-            <a class="voltar" href="/">Voltar</a> <!-- Voltar pra o /email_parabens na real-->
+            <a class="voltar" href="/email_parabens?aniversariante={{ indice }}">Voltar</a> <!-- Voltar pra o /email_parabens na real-->
             </section>
         </main>
 {% endblock %}
