--- a/templates/email_parabens.html
+++ b/templates/email_parabens.html
@@ -9,7 +9,7 @@
             <section>
             <form action="/email_parabens" method="post">
                 <h2 class="outrosH2"> Digite seu nome: </h2>
-                <input autocomplete="off" autofocus name="name" placeholder="Nome" type="text">
+                <input autocomplete="off" autofocus name="name" placeholder="Nome" type="text" required>
                 <h2 class="outrosH2"> Escolha uma opção: </h2>
                 <input type="submit" name="personalizado" value="Enviar e-mail personalizado">
                 <input type="submit" name="padrao" value="Enviar e-mail padrão">
