--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,10 @@
         {% endif %}
 
         {% block main %} {% endblock %}
-        
+
+        <footer>
+            <p>Web app desenvolvido por <a href="https://github.com/Danilo-Xaxa" target="_blank">Danilo Xaxá</a></p>
+        </footer>
+
     </body>
 </html>
