alterando uma palavrinha

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                 {% if textos %}
                     {% for texto in textos %}
                         <h2 class="niverDeQuem">{{ texto }}</h2>
-                        <h2 class="cliqueAqui"><a href="javascript:redirecionar('{{ loop.index - 1 }}');" id="{{ aniversariantes[loop.index - 1] }}">Clique aqui</a> para enviar os parabéns</h2>
+                        <h2 class="cliqueAqui"><a href="javascript:redirecionar('{{ loop.index - 1 }}');" id="{{ aniversariantes[loop.index - 1] }}">Clique aqui</a> para dar os parabéns</h2>
                     {% endfor %}
                 {% endif %}
             </section>
